changed package structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url =jdbc:mysql://127.0.0.1:3306/SampleDatabase?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = sweetitech
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 
